# data-engineering-zoomcamp

./: .gitignore  README.md  profiles.yml  pyproject.toml  take_note.txt
01-docker-terraform/: Module_1_INTERVIEW_Q&A.md
01-docker-terraform/pipeline/: notebook.ipynb
02-workflow-orchestration/flows/: 05_postgres_taxi_scheduled.yaml
03-data-warehouse/: big_query.sql  big_query_hw.sql  big_query_ml.sql  summary.md  summary_v1.md
03-data-warehouse/extras/: web_to_gcs.py
04-analytics-engineering/taxi_rides_ny/: ingest_data.py  pyproject.toml
data-engineering-zoomcamp/01-docker-terraform/pipeline/: pipeline.py  test_data.csv
data-engineering-zoomcamp/02-workflow-orchestration/: docker-compose.yml
data-engineering-zoomcamp/02-workflow-orchestration/flows/: 01_hello_world.yaml  (+8 more)
homework/hw_module_2/: README.md  hw_2_sql.sql  module_2_infra_cheat_sheet.md
homework/hw_module_3/: README.md  hw_3_big_query.sql  load_yellow_taxi_data.py
homework/hw_module_4/: ingest_data.py
homework/hw_module_5/: module_5_answer.md
homework/hw_module_6/: README.md  hw_6.ipynb
homework/hw_module_7/: .gitignore  NOTES.md  README.md  flink_reference_guide.md  implementation_plan_q6  main.py  pyproject.toml
homework/hw_module_7/workshop/: Dockerfile.flink  docker-compose.yml
homework/hw_module_7/workshop/notebooks/: analysis.ipynb  consumer_db.ipynb  producer.ipynb
homework/hw_module_7/workshop/src/: models.py
homework/hw_module_7/workshop/src/job/: q4_tumbling_window.py  q5_session_window.py  q6_largest_tip.py
pipeline/: Dockerfile  docker-compose.yml  ingest_data.py
(+36 files in other folders)
